<resources>
    <string name="app_name">JoinIn</string>
    <string name="title_activity_main">JoinIn</string>
    <string name="title_activity_create_event">Create an event</string>
    <string name="action_settings">Settings</string>
    <string name="core_id">Core ID</string>
    <string name="button_go">Go</string>
    <string name="text_greeting">Welcome to Freescale JoinIn!</string>
    <string name="text_enter_event_name">Enter the Event name</string>
    <string name="event_name">Event name</string>
    <string name="button_change_core_id">Change core ID</string>
    <string name="title_activity_verification">Verify</string>
    <string name="text_verify">Are these correct?</string>
    <string name="button_lets_go">Yes, let\'s go!</string>
    <string name="button_change_event_name">Change Event Name</string>
    <string name="title_activity_event">Event</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone_num">Phone</string>
    <string name="button_finished">Finished?</string>
    <string name="title_activity_finish_event">Finish</string>
    <string name="text_verify_finished">Are you sure you are finished?</string>
    <string name="text_verify_coreid">Enter core ID to confirm</string>
    <string name="button_confirm_finish">Confirm Finish</string>
    <string name="button_back_to_reg">Back to Registration</string>
    <string name="alert_invalid_coreid">Core ID is not correct</string>
    <string name="button_ok">OK</string>
    <string name="title_activity_finish_join_in">Success</string>
    <string name="text_success">You joined in our event!</string>
    <string name="button_done">Done</string>
    <string name="alert_no_connection">No Internet connection!\nPlease, connect to the internet to send guests an email</string>
    <string name="text_thanks">Thanks, </string>
    <string name="alert_no_core_id">Please, enter your core ID</string>
    <string name="alert_no_event_name">Please, enter an event name</string>
    <string name="alert_no_first_name">Please, enter your first name</string>
    <string name="alert_no_last_name">Please, enter your last name</string>
    <string name="alert_no_email">Please, enter your email</string>
    <string name="optional">(optional)</string>
</resources>
