<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.freescale.joinin.VerificationActivity">

    <TextView
        android:id="@+id/text_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_verify"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button_lets_go"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_lets_go"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_verify"
        android:onClick="goToEvent"
        android:background="@color/green"/>

    <Button
        android:id="@id/button_change_core_id"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_change_core_id"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_lets_go"
        android:onClick="changeCoreID"
        android:background="@color/teal"/>

    <Button
        android:id="@+id/button_change_event_name"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_change_event_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_change_core_id"
        android:onClick="changeEventName"
        android:background="@color/teal"/>
</RelativeLayout>
