<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.freescale.joinin.EventActivity">

    <TextView
        android:id="@+id/text_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_first_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_last_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/text_first_name"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@id/text_last_name"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/text_phone_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_phone_num"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_below="@id/text_email"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_toEndOf="@id/text_first_name"
        android:layout_marginTop="20dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_toEndOf="@id/text_last_name"
        android:layout_below="@id/edit_first_name"
        android:layout_alignStart="@id/edit_first_name"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_toEndOf="@id/text_email"
        android:layout_below="@id/edit_last_name"
        android:layout_alignStart="@id/edit_last_name"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_phone_num"
        android:inputType="phone"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_toEndOf="@id/text_phone_num"
        android:layout_below="@id/edit_email"
        android:layout_alignStart="@id/edit_first_name"
        android:textColor="@color/black"
        android:hint="@string/optional"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/text_phone_num"
        android:layout_alignStart="@id/edit_first_name"
        android:layout_marginTop="20dp"
        android:text="@string/button_go"
        android:onClick="joinInEvent"
        android:background="@color/green"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_finished"
        android:onClick="finishEvent"
        android:background="@color/red"/>

</RelativeLayout>
