<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_fsl_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/fsl_logo"/>

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_greeting"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/img_fsl_logo"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/core_id"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/greeting"
        android:hint="@string/core_id"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/button_go"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/button_go"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/core_id"
        android:onClick="go"
        android:background="@color/green"/>

</RelativeLayout>
